# mataroa

./: .envrc.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  reset-database-localdev.sh  setup-database-localdev.sh  test
.github/workflows/: check.yml  deploy.yml  docs.yml  image.yml
ansible/: mataroa.env.j2
deploy/: .envrc.example  backup-database.sh  deploy.sh  generate-systemd-files.sh  install-caddy.sh  provision.sh  setup-database.sh  setup-rclone.sh
deploy/templates/: Caddyfile  mataroa-backup.service  mataroa-renewal.service  mataroa-renewal.timer  mataroa.env
docs/src/: SUMMARY.md  deployment.md  feature-release.md  file-structure-walkthrough.md
export_base_epub/: content.opf
export_base_hugo/: config.toml  style.css
export_base_zola/: config.toml
main/: admin.py  atproto_oauth.py  denylist.py  feeds.py  forms.py  markdown_extensions.py  middleware.py  models.py  scheme.py  sitemaps.py  text_processing.py  urls.py  util.py
main/migrations/: 0105_merge_subscribe_footer_notes.py  0106_remove_subscribe_note.py  0107_user_post_altpath_on.py  0108_alter_user_custom_domain.py  0109_remove_onboard_problems_remove_onboard_quality_and_more.py  0110_analyticpost_created_at_index.py  0111_analyticpage_indexes.py  0112_remove_user_about.py  0113_post_owner_published_at_idx.py  0114_blueskyoauthrequest_blueskyoauthsession.py  0115_blueskyoauthsession_publication_uri.py  0116_add_bluesky_document_rkey_to_post.py
main/tests/: test_api.py  test_billing.py  test_blog.py  (+5 more)
mataroa/: settings.py
(+62 files in other folders)
