[project]
name = "mataroa"
version = "1.5.0"
description = "Mataroa is a simple blogging platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach[css]>=6.2.0",
    "django>=6.0",
    "gunicorn>=23.0",
    "markdown>=3.9",
    "psycopg[binary]>=3.2",
    "pygments>=2.19",
    "stripe==13.0.1",
]

[dependency-groups]
dev = [
    "coverage>=7.11",
    "djade>=1.6",
    "ruff>=0.14",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"] # line too long
